// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. extracts to a div for simple views 1`] = `
<div
  className=" _bacCol-19sdxe _borBotLefRad-6dbucr _borBotRigRad-1aj2mxs _borTopLefRad-4h0qql _borTopRigRad-147yzfv _boxSha-e8nksv _dis-1t5hiln _fle-xfkqa _fleBas-1yot9qu _fleDir-137l0rb test1"
>
  <span
    className=" _dis-1kxx03"
  >
    hello world
  </span>
</div>
`;

exports[`2. extracts className for complex views but keeps other props 1`] = `
Array [
  <div
    className="css-view-1dbjc4n who _padTop-bzn8fa _padRig-pifj49 _padLef-786xko _padBot-vxs88 _boxSha-xgwarg _borTopRigRad-1wp9zbv _borTopLefRad-16k0qju _borBotRigRad-kvqeen _borBotLefRad-zbbbcf r-display-6koalj r-flexBasis-1mlwlqe r-flexDirection-eqz5dr"
    style={
      Object {
        "backgroundColor": "rgba(255,255,255,1.00)",
        "boxShadow": "0px 0px 0px rgba(0,0,0,0.20)",
        "overflowX": "hidden",
        "overflowY": "hidden",
      }
    }
  />,
  <div
    className="css-view-1dbjc4n ease-in-out-top _padTop-bzn8fa _padRig-pifj49 _padLef-786xko _padBot-vxs88 _boxSha-xgwarg _borTopRigRad-1wp9zbv _borTopLefRad-16k0qju _borBotRigRad-kvqeen _borBotLefRad-zbbbcf r-display-6koalj r-flexBasis-1mlwlqe r-flexDirection-eqz5dr"
    style={
      Object {
        "backgroundColor": "rgba(255,255,255,1.00)",
        "boxShadow": "0px 0px 0px rgba(0,0,0,0.20)",
        "paddingBottom": "2px",
        "paddingTop": "2px",
        "top": "-14px",
      }
    }
  >
    <span
      className=" _dis-1kxx03"
    >
      hello world
    </span>
  </div>,
]
`;

exports[`2. extracts className for complex views but keeps other props 2`] = `
Array [
  <div
    className="css-view-1dbjc4n who _padTop-bzn8fa _padRig-pifj49 _padLef-786xko _padBot-vxs88 _boxSha-xgwarg _borTopRigRad-1wp9zbv _borTopLefRad-16k0qju _borBotRigRad-kvqeen _borBotLefRad-zbbbcf r-display-6koalj r-flexBasis-1mlwlqe r-flexDirection-eqz5dr"
    style={
      Object {
        "backgroundColor": "rgba(255,255,255,1.00)",
        "boxShadow": "0px 0px 0px rgba(0,0,0,0.20)",
        "overflowX": "hidden",
        "overflowY": "hidden",
      }
    }
  />,
  <div
    className="css-view-1dbjc4n ease-in-out-top _padTop-bzn8fa _padRig-pifj49 _padLef-786xko _padBot-vxs88 _boxSha-xgwarg _borTopRigRad-1wp9zbv _borTopLefRad-16k0qju _borBotRigRad-kvqeen _borBotLefRad-zbbbcf r-display-6koalj r-flexBasis-1mlwlqe r-flexDirection-eqz5dr"
    style={
      Object {
        "backgroundColor": "rgba(0,0,0,1.00)",
        "boxShadow": "0px 0px 0px rgba(0,0,0,0.20)",
        "paddingBottom": "2px",
        "paddingTop": "2px",
        "top": "0px",
      }
    }
  >
    <span
      className=" _dis-1kxx03"
    >
      hello world
    </span>
  </div>,
]
`;

exports[`3. places className correctly given a single spread 1`] = `
Array [
  "css-view-1dbjc4n",
  "_oveY-5fy05z",
  "_oveX-fhm3zh",
  "r-display-6koalj",
  "r-flexBasis-1mlwlqe",
  "r-flexDirection-eqz5dr",
]
`;

exports[`4. leaves dynamic variables 1`] = `
Array [
  "css-view-1dbjc4n",
  "_hei-1xd8dko",
  "_oveX--hover-1hnj4fx",
  "_oveY--hover-8o456b",
  "r-display-6koalj",
  "r-flexBasis-1mlwlqe",
  "r-flexDirection-eqz5dr",
]
`;

exports[`4. leaves dynamic variables 2`] = `
<div
  className="css-view-1dbjc4n  _hei-1xd8dko _oveX--hover-1hnj4fx _oveY--hover-8o456b r-display-6koalj r-flexBasis-1mlwlqe r-flexDirection-eqz5dr"
  style={
    Object {
      "width": "calc(100% + 20px)",
    }
  }
/>
`;

exports[`5. spread conditional 1`] = `
<div
  className="_bacCol-183yn7 _oveY-5fy05z _oveX-fhm3zh _fleDir-137l0rb _fleBas-1yot9qu _dis-1t5hiln"
>
  <div
    className="_bacCol-183yn7 hello-world _oveY-5fy05z _oveX-fhm3zh _fleDir-137l0rb _fleBas-1yot9qu _dis-1t5hiln"
  />
</div>
`;

exports[`6. spread ternary 1`] = `
<div
  className="_bacCol-183yn7 _oveY-5fy05z _oveX-fhm3zh _fleDir-137l0rb _fleBas-1yot9qu _dis-1t5hiln"
>
  <span
    className=" _dis-1kxx03"
  >
    hello world
  </span>
</div>
`;

exports[`6. spread ternary 2`] = `
<div
  className="_bacCol-19sdxe _oveY-5fy05z _oveX-fhm3zh _fleDir-137l0rb _fleBas-1yot9qu _dis-1t5hiln"
>
  <span
    className=" _dis-1kxx03"
  >
    hello world
  </span>
</div>
`;

exports[`7. ternary + data-is 1`] = `
<div
  className=" _dis-1t5hiln _fleBas-1yot9qu _fleDir-137l0rb _maxWid-1ycawwn _minWid-8nu6af _padBot-2o52vu _padLef-1twkdzm _padRig-wf1rmn _wid-iq520"
>
  <div
    className="_wid-19g3skm _hei-1gkqrua _fleDir-137l0rb _fleBas-1yot9qu _dis-1t5hiln"
  />
</div>
`;

exports[`8. styleExpansions 1`] = `
<div
  className=" _bot-jemzgi _dis-1t5hiln _fleBas-1yot9qu _fleDir-137l0rb _lef-5eh3mh _pos-1cd7xcj _rig-1fpqt2t _top-3jo2cn"
>
  <div
    className=" _bacCol-19sdxe _dis-1t5hiln _fleBas-1yot9qu _fleDir-137l0rb _pos-172fg7u"
  >
    <div
      className="css-view-1dbjc4n  _bacCol-1d0hial _bot-jemzgi _lef-5eh3mh _pos-1cd7xcj _rig-1fpqt2t _top-3jo2cn r-display-6koalj r-flexBasis-1mlwlqe r-flexDirection-eqz5dr r-position-u8s1d"
    />
  </div>
</div>
`;

exports[`9. combines with classname 1`] = `
<div
  className=" _dis-1t5hiln _fleBas-1yot9qu _fleDir-137l0rb _padBot-1dckud4 _padTop-7p05t7 home-top-dish"
/>
`;

exports[`10. extracts Text 1`] = `
<span
  className=" _dis-1kxx03 _fonSiz-1r3hmks"
>
  <span
    className=" _dis-1kxx03 _useSel-149r848"
  >
    <div
      className="_col-18s66rc _fonWei-1e5fjgk _fonSiz-oq711f css-text-901oao"
      dir="auto"
      onClick={[Function]}
      style={
        Object {
          "display": "inline",
        }
      }
    >
      hello
    </div>
  </span>
</span>
`;

exports[`11. combines everything 1`] = `
Array [
  "css-view-1dbjc4n",
  "_borTopCol-dic8vh",
  "_borRigCol-1n8flkp",
  "_borLefCol-wse84g",
  "_borBotCol-1qvh775",
  "_hei-1w8hlxl",
  "_borTopRigRad-nt9njv",
  "_borTopLefRad-1aj7be0",
  "_borBotRigRad-t90ciw",
  "_borBotLefRad-1465ezg",
  "_pos-1cd7xcj",
  "_oveY-5fy05z",
  "_oveX-fhm3zh",
  "_minHei-14jhmuj",
  "_borTopWid-116bu6u",
  "_borTopSty-1l1zs75",
  "_borRigWid-ebtqkj",
  "_borRigSty-1amxggv",
  "_borLefWid-cqtxzd",
  "_borLefSty-1c5qq7j",
  "_borBotWid-9o8q5o",
  "_borBotSty-17ef7e3",
  "_bacCol-183yn7",
  "_aliIte-walpst",
  "r-display-6koalj",
  "r-flexBasis-1mlwlqe",
  "r-flexDirection-eqz5dr",
]
`;

exports[`12. ternary multiple on same key 1`] = `
<div
  className="_tra-1uwuzj6 _opa-cy31dm _fleDir-137l0rb _fleBas-1yot9qu _dis-1t5hiln"
/>
`;

exports[`14. extracts psuedo styles and evaluates constants 1`] = `
<div
  className=" _dis-1t5hiln _fleBas-1yot9qu _fleDir-137l0rb _bacCol--hover-19sdxe _bacCol--active-183yn7"
/>
`;

exports[`15. extracts spacer (complex expansion) 1`] = `
Array [
  <div
    className=" _fle-nioih2 _fleShr-xrfyjv _minHei-yipka2 _minWid-12scp4x"
  />,
  <div
    className=" _fle-xfkqa _fleShr-xrfyjv _minHei-14jhmuj _minWid-11ylsht"
  />,
]
`;

exports[`16. deopt when spreading multiple 1`] = `
<div
  className="css-view-1dbjc4n _fle-xfkqa _bacCol-19sdxe r-display-6koalj r-flexBasis-1mlwlqe r-flexDirection-eqz5dr"
/>
`;
